--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "2b-ui",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.1",
+  "main": "dist/2b-ui.umd.js",
+  "typings": "dist/sr/main.d.ts",
   "scripts": {
-    "build": "vue-cli-service build --target lib --name hy-ui src/main.ts",
+    "build": "vue-cli-service build --target lib --name 2b-ui src/main.ts",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
