--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "declaration": true,
+    "declarationDir": ".",
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
