--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "2b-ui",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "dist/2b-ui.umd.js",
-  "typings": "dist/sr/main.d.ts",
+  "typings": "dist/src/main.d.ts",
   "scripts": {
     "build": "vue-cli-service build --target lib --name 2b-ui src/main.ts",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "storybook": "start-storybook -p 9001 -c .storybook",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-class-decorator": "^7.4.2"
@@ -25,6 +24,7 @@
     "babel-core": "7.0.0-bridge.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "storybook": "^1.0.0",
     "ts-jest": "^23.0.0",
     "typescript": "^3.0.0",
     "vue-template-compiler": "^2.5.17"
