--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "vue": "^2.5.17",
-    "vue-class-component": "^6.0.0",
-    "vue-class-decorator": "^7.4.8"
+    "vue": "2.5.17",
+    "vue-class-component": "6.3.2",
+    "vue-class-decorator": "7.5.1"
   },
   "devDependencies": {
-    "@storybook/vue": "^3.4.11",
-    "@types/jest": "^23.1.4",
-    "@vue/cli-plugin-babel": "^3.0.4",
-    "@vue/cli-plugin-typescript": "^3.0.4",
-    "@vue/cli-plugin-unit-jest": "^3.0.4",
-    "@vue/cli-service": "^3.0.4",
-    "@vue/test-utils": "^1.0.0-beta.20",
+    "@storybook/vue": "4.0.2",
+    "@types/jest": "23.3.9",
+    "@vue/cli-plugin-babel": "3.1.0",
+    "@vue/cli-plugin-typescript": "3.1.0",
+    "@vue/cli-plugin-unit-jest": "3.1.0",
+    "@vue/cli-service": "3.1.1",
+    "@vue/test-utils": "1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
-    "less": "^3.0.4",
-    "less-loader": "^4.1.0",
-    "storybook": "^1.0.0",
-    "ts-jest": "^23.0.0",
-    "typescript": "^3.0.0",
-    "vue-template-compiler": "^2.5.17"
+    "less": "3.8.1",
+    "less-loader": "4.1.0",
+    "storybook": "1.0.0",
+    "ts-jest": "23.10.4",
+    "typescript": "3.1.6",
+    "vue-template-compiler": "2.5.17"
   },
   "postcss": {
     "plugins": {
