--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "2b-ui",
-  "version": "0.0.24",
+  "version": "0.0.26",
   "main": "dist/2b-ui.umd.js",
+  "files": [
+    "dist"
+  ],
   "typings": "dist/src/main.d.ts",
   "scripts": {
     "build": "vue-cli-service build --target lib --name 2b-ui src/main.ts",
