--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "declaration": true,
-    "declarationDir": ".",
+    "declarationDir": "./dist",
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
