--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "2b-ui",
-  "version": "0.0.26",
-  "main": "dist/2b-ui.umd.js",
+  "version": "0.0.3",
+  "main": "dist/2b-ui.common.js",
+  "unpkg": "dist/2b-ui.umd.js",
   "files": [
     "dist"
   ],
